# Bot-secretar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  Procfile  README.md  ScrepBot.py  TGBot.py  Weather.py  alembic.ini  app.json  app.py  app_bot.py  bot_app.py  cliff.toml  config.py  developers_manager.py  docker-compose.yaml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  tkn.py  web_app.py  wsgi.py
.github/workflows/: deploy.yaml  generate_changelog.yaml  python-publish.yml  test_runner.yaml
admin/: admin.py  analytics.py  models.py
alembic/: env.py
bot/: README.md  ScrepBot.py  TGBot.py  Weather.py  __init__.py  baza.py  bot_bz.db  cenz.json  handlers.py  keyboardd.py  keyboards.py  loggs_bot.py  models.py  other.py  screpers.py  tkn.py  weat.py
bot/script/: start_bot.py
bot/static/: file.css
bot/templates/: autorization.html
bot/templates/admin/: index.html
finance/: crypto.py  markets.py  models.py  other.py
migrations/: alembic_autogenerate_enums.py  env.py
migrations/versions/: 2024_11_08_2000-190bc521e750_initial_revision.py  2025_03_07_2126-7fa7797fd244_add_table_reminders.py  2025_08_16_0135-2e25b3c590d8_timezone_for_reminder.py  2025_08_16_1936-335faec11f5a_add_model_timezone.py  2025_08_17_1353-9d161514cc85_add_timezones.py  2026_04_27_2300-da7247b73fd9_add_variables.py
news/: news.py  weather.py
nginx/: Dockerfile  nginx.conf
project/adminpanel/: __init__.py
project/adminpanel/admin/: admin.py  models.py
project/adminpanel/admin/analytics/: dashboard_weight.py  (+2 more)
project/adminpanel/api/: routes.py
project/database/: database.py  models.py
project/telegram/: __init__.py  bot.py  expense_journal.py  keyboards.py  logger.py  middlewares.py  reminders_journal.py  tasks.py  utils.py  weight_journal.py  workout_journal.py
scripts/: add_records_in_db.py  config_nginx.py
scripts/dokku/: deploy.py
src/database/: __init__.py  base.py
src/database/models/: expenses.py  reminders.py  users.py  variables.py  weight.py  workouts.py
src/service/: expenses.py  users.py  weight.py  workouts.py
src/services/: expenses.py  reminders.py  users.py  weight.py  workouts.py
src/telegram/: bot.py  middleware.py  states.py
src/telegram/handlers/: base.py  expenses.py  profile.py  reminders.py  weight.py  workout.py
src/telegram/keyboards/: base_kb.py  expenses_kb.py  profile.py  reminders.py  weight_kb.py  workout_kb.py
src/utils/: custom_aiogram.py  decorators.py  exceptions.py  text_templates.py  tools.py
src/webapp/: admin.py  infopage.py  wsgi.py
src/webapp/dashbords/: base.py  expenses.py  weight.py
src/webapp/templates/: infopage.html  login.html
tests/: conftest.py  test_bot_base_handlers.py  test_bot_expenses_handlers.py  test_webapp_base.py
(+12 files in other folders)
