[tool.poetry]
packages = [
    {include = 'bot'},
]
name = "bot-secretar"
version = "2.0.0"
description = "telegram bot"
authors = ["Артем Торшин <avtorca4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
pytelegrambotapi = "^4.8.0"
flask-sqlalchemy = "^3.0.2"
python-dotenv = "^0.21.0"
flask-admin = "^1.6.0"
pillow = "^9.3.0"
flask-babelex = "^0.9.4"
flask-login = "^0.6.2"
dash = "^2.7.1"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



