[tool.poetry]
packages = [
    {include = 'project'},
]
name = "bot-secretar"
version = "2.0.0"
description = "telegram bot"
authors = ["Артем Торшин <avtorca4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
flask-admin = "^1.6.0"
pillow = "^9.3.0"
flask-babelex = "^0.9.4"
flask-login = "^0.6.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
prettytable = "^3.5.0"
pandas = "^1.5.2"
aiogram = "^2.25.1"
flask-sqlalchemy = "^3.0.5"
alembic = "^1.11.1"
gunicorn = "^21.2.0"
celery = "^5.3.4"
redis = "^5.0.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



